<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gadient_bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_title"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/baseline_person_pin_24"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/username_hint"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/password_hint"
        android:drawableStart="@drawable/baseline_edit_24"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#C3C7F4"
        android:padding="12dp"
        android:text="@string/login_button"
        android:textColor="@color/text_color" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNavigateToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/not_registered"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#C8A8E9"
            android:padding="4dp"
            android:text="@string/register_button"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
