<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/thay_doi_ghi_chu_nhanh"
            android:icon="@drawable/baseline_border_color_24"
            android:title="@string/change_notes_quickly"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/doi_mat_khau"
            android:icon="@drawable/baseline_edit_24"
            android:title="@string/change_password"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/dang_xuat"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/sign_out"
            tools:ignore="HardcodedText" />
    </group>
</menu>
