<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/gadient_bg_register">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3AADD"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <!-- Form đăng ký -->
    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/register_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:drawableStart="@drawable/baseline_person_pin_24"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_edit_24"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:drawableStart="@drawable/baseline_edit_24"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:backgroundTint="#C3C7F4"
        android:textColor="@color/text_color"
        android:layout_marginTop="16dp"
        android:padding="12dp" />
</LinearLayout>
