<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3AADD"
    tools:context=".setting.SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- General Settings Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="60dp"
                android:text="@string/app_setting"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_settings"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@color/background_khac"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:background="@color/background"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="34dp"
                    android:src="@drawable/setting1"
                    android:background="@color/light_gray"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode"
                        android:textSize="16sp"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_light"
                        android:textSize="14sp"
                        android:textColor="@color/text_color" />
                </LinearLayout>

                <Switch
                    android:id="@+id/darkModeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_light"
                    android:textColor="@color/text_color"
                    android:checked="false"/>
            </LinearLayout>

            <!-- Language -->
            <LinearLayout
                android:id="@+id/languageOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/background"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="34dp"
                    android:src="@drawable/setting3"
                    android:background="@color/light_gray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/language"
                    android:textSize="16sp"
                    android:textColor="@color/text_color" />
            </LinearLayout>

            <!-- Notifications -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:background="@color/background"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="34dp"
                    android:src="@drawable/setting8"
                    android:background="@color/light_gray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/notifications"
                    android:textSize="16sp"
                    android:textColor="@color/text_color" />

                <Switch
                    android:id="@+id/switch_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </LinearLayout>

            <!-- Clear Data -->
            <LinearLayout
                android:id="@+id/clearDataOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:background="@color/background"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="34dp"
                    android:src="@drawable/setting9"
                    android:background="@color/light_gray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/clear_data"
                    android:textSize="16sp"
                    android:textColor="@color/text_color" />
            </LinearLayout>

            <!-- Information Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/background_khac" />

            <!-- About App -->
            <LinearLayout
                android:id="@+id/aboutAppOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:background="@color/background"
                android:focusable="true">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="34dp"
                    android:src="@drawable/setting4"
                    android:background="@color/light_gray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/app_info"
                    android:textSize="16sp"
                    android:textColor="@color/text_color" />
            </LinearLayout>

            <!-- Terms & Conditions -->
            <LinearLayout
                android:id="@+id/termsOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:background="@color/background"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="34dp"
                    android:src="@drawable/setting5"
                    android:background="@color/light_gray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/terms_conditions"
                    android:textSize="16sp"
                    android:textColor="@color/text_color" />
            </LinearLayout>

            <!-- Privacy Policy -->
            <LinearLayout
                android:id="@+id/privacyPolicyOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:background="@color/background"
                android:focusable="true">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="34dp"
                    android:src="@drawable/setting6"
                    android:background="@color/light_gray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/privacy_policy"
                    android:textSize="16sp"
                    android:textColor="@color/text_color" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shareAppOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/background">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="34dp"
                    android:src="@drawable/setting7"
                    android:background="@color/light_gray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/share_app"
                    android:textSize="16sp"
                    android:textColor="@color/text_color" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
