<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <!-- Ảnh đại diện lớn -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C3C7F4"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/circle_background"
                android:clipToOutline="true"
                android:contentDescription="Profile Picture"
                android:scaleType="centerCrop"
                android:src="@drawable/avt" />
            <!-- Tên và nghề nghiệp -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="OLIVIA WILSON"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_thay_doi_ten"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/baseline_edit_24" />
            </LinearLayout>
            <!-- Lựa chọn nghề nghiệp -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#C3C7F4"
                android:padding="10dp">

                <Spinner
                    android:id="@+id/spinner_profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/nghe_nghiep_bg"
                    android:entries="@array/professions"
                    android:gravity="center"
                    android:padding="8dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:text="@string/task_chart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Hàng thống kê -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/statistic_background"
                android:orientation="vertical"
                android:padding="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/complete"/>
                    <Button
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:backgroundTint="#F2DDDC"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incomplete"/>
                    <Button
                        android:layout_width="20dp"
                        android:layout_margin="5dp"
                        android:layout_height="30dp"
                        android:backgroundTint="#E3AADD"/>
                </LinearLayout>

                <com.example.appquanlycanhan.profile.PieChartView
                    android:id="@+id/pieChartView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="16dp"
                android:textColor="@color/text_color"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAwards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
