<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:text="@string/mission_overview"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Hàng thống kê -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/statistic_background"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/textCompletedTasksCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/text_color"
                    android:textSize="28sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_task"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/statistic_background"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/textIncompleteTasksCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/text_color"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_done_task"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Danh sách nhiệm vụ chưa hoàn tất -->
        <TextView
            android:id="@+id/textNhiemVuChuaXong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/item_nvu"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/not_done_task"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Danh sách nhiệm vụ chưa hoàn tất -->
        <ListView
            android:id="@+id/taskListViewChuaXong"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:divider="#CCCCCC"
            android:dividerHeight="1dp" />

        <TextView
            android:id="@+id/textNhiemVuHoanTat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/item_nvu"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/done_task"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Danh sách nhiệm vụ đã hoàn tất -->
        <ListView
            android:id="@+id/taskListViewHoanTat"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button_background"
            android:divider="#CCCCCC"
            android:dividerHeight="1dp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="Add Task"
        android:src="@drawable/ic_add" />
</FrameLayout>